2006-04-08  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-keyfile.h: Use Boost if TR1 is not available.

	* schroot/sbuild-chroot.h: Use Boost if TR1 is not available.

	* schroot/sbuild-auth.h: Use Boost if TR1 is not available.

	* schroot/Makefile.am:
	(AM_CXXFLAGS): Remove -Wextra.
	(BUILT_SOURCES): Don't build sbuild.gch.
	(#CLEANFILES): Don't clean sbuild.gch.
	(nodist_libsbuild_la_SOURCES): Add sbuild-config.h.

	* configure.ac: Add a new header, schroot/sbuild-config.h.  Add
	header checks for tr1/memory, boost/shared_ptr.hpp, tr1/tuple and
	boost/tuple/tuple.hpp.

2006-04-07  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #361108.

	* debian/README.Debian: Move chroot safety advice to README.

2006-04-07  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Bump version to 0.2.9.

	* NEWS: Bump version to 0.2.9.

	* debian/changelog: Bump version to 0.2.9-1.

2006-04-07  Roger Leigh  <rleigh@debian.org>

	* po/vi.po: Update.

2006-03-19  Roger Leigh  <rleigh@debian.org>

	* Version 0.2.8.

	* debian/changelog: Update for 0.2.8.

2006-03-18  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Bump version to 0.2.8.

	* NEWS: Bump version to 0.2.8.

	* debian/changelog: Bump version to 0.2.8-1.

2006-03-18  Roger Leigh  <rleigh@debian.org>

	* po/vi.po: Update.

	* po/sv.po: Update.

2006-03-18  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.cc (run_child): Don't fix up argv for a
	login shell if using a command-prefix, since this will not be a
	valid command for command-prefix to execute.

2006-03-08  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Version 0.2.7-2, released to fix a dchroot
	crash.

	* schroot/dchroot-session.cc
	(run_impl): Correctly chain up to the base class.

2006-03-08  Roger Leigh  <rleigh@debian.org>

	* Version 0.2.7.

	* debian/changelog: Update for 0.2.7.

	* NEWS: Update for 0.2.7.

2006-03-07  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 0.2.7.
