@@ -437,102 +437,6 @@ namespace sbuild
 
   protected:
     /**
-     * Helper to perform formatting of chroot details.
-     */
-    template<typename T>
-    class format_detail
-    {
-      /**
-       * The constructor.
-       *
-       * @param name the name of the property to format.
-       * @param value the value of the property to format.  The value
-       * type must support output to an ostream.
-       */
-    public:
-      format_detail (std::string const& name,
-		     T const&           value):
-	name(name),
-	value(value)
-      {}
-
-      /**
-       * Output the formatted detail to an ostream.
-       *
-       * @param stream the stream to output to.
-       * @param rhs the formatted detail to output.
-       * @returns the stream.
-       */
-      friend std::ostream&
-      operator << (std::ostream&           stream,
-		   format_detail<T> const& rhs)
-      {
-	return stream << "  "
-		      << std::setw(22) << std::left << rhs.name
-		      << rhs.value << '\n';
-      }
-
-      /**
-       * Output the formatted detail to an ostream.  This is a special
-       * case for boolean values.
-       *
-       * @param stream the stream to output to.
-       * @param rhs the formatted detail to output.
-       * @returns the stream.
-       */
-      friend std::ostream&
-      operator << (std::ostream&              stream,
-		   format_detail<bool> const& rhs)
-      {
-	const char *desc = 0;
-	if (rhs.value)
-	  desc =  _("true");
-	else
-	  desc = _("false");
-	return stream << format_detail<std::string>(rhs.name, desc);
-      }
-
-      /**
-       * Output the formatted detail to an ostream.  This is a special
-       * case for string_list values.
-       *
-       * @param stream the stream to output to.
-       * @param rhs the formatted detail to output.
-       * @returns the stream.
-       */
-      friend std::ostream&
-      operator << (std::ostream&                     stream,
-		   format_detail<string_list> const& rhs)
-      {
-	return stream <<
-	  format_detail<std::string>(rhs.name,
-				     string_list_to_string(rhs.value, " "));
-      }
-
-    private:
-      /// The name of the property.
-      std::string const& name;
-      /// The value of the property.
-      T const&           value;
-    };
-
-    /**
-     * Format a name-value pair for output.  This is a convenience
-     * wrapper to construct a format_detail of the appropriate type.
-     *
-     * @param name the name to output.
-     * @param value the value to output.
-     * @returns a format_detail of the appropriate type.
-     */
-    template<typename T>
-    format_detail<T>
-    format_details (std::string const& name,
-		    T const&           value) const
-    {
-      return format_detail<T>(name, value);
-    }
-
-    /**
      * Print detailed information about the chroot to a stream.  The
      * information is printed in plain text with one line per
      * property.
